--- a/feeds.toml
+++ b/feeds.toml
@@ -18,4 +18,4 @@ url = "https://reason.com/archives"
 entrySelector = ".issue-thumb"
 titleSelector = "p > a"
 linkSelector = "a"
-contentSelector = "a > img"
+contentSelector = "img"
