--- a/feeds.toml
+++ b/feeds.toml
@@ -12,7 +12,7 @@ entrySelector = ".jcarousel-wrapper .jcarousel-item"
 titleSelector = "h2"
 linkSelector = "h2 a"
 
-[reason]
+[reason-issues]
 title = "Reason - Issues"
 url = "https://reason.com/archives"
 entrySelector = ".issue-thumb"
